# comfyui-sd-prompt-mixlab

./: .gitignore  README.md  __init__.py  api_like_OAI.py  pyproject.toml  requirements.txt
search/: Search.py  search.js
web/: checkVersion_mixlab.js  main.js
