[project]
name = "comfyui-sd-prompt-mixlab"
description = "an experimental node aimed at exploring the collaborative way of human-machine creation"
version = "1.0.0"
license = "LICENSE"
dependencies = ["aiohttp"]

[project.urls]
Repository = "https://github.com/shadowcz007/comfyui-sd-prompt-mixlab"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-sd-prompt-mixlab"
Icon = ""
